--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Katsuya Shiratori, Ph.D. / Site Title"
+title                    : "Katsuya Shiratori, Ph.D."
 title_separator          : "-"
 name                     : &name "Katsuya Shiratori"
-description              : &description "personal description"
+description              : &description "Ph.D. in Physics | Nanophotonics & Machine Learning"
 url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
@@ -22,12 +22,12 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   name             : "Katsuya Shiratori"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Ph.D. in Physics | Nanophotonics & Machine Learning"
   location         : "Champaign, IL"
-  employer         : "Red Brick University"
+  employer         : 
   uri              : # URL
   email            : "katsuya2@illinois.edu" 
 
@@ -58,9 +58,9 @@ author:
   goodreads        : # Username
   google_plus      : # Username
   keybase          : # Username
-  instagram        : # Username
+  instagram        : https://www.instagram.com/sher_bird/
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : https://www.linkedin.com/in/katsuya-shiratori/
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
@@ -68,7 +68,7 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : # Username for X / Twitter
+  twitter          : @katsyua_swan
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
