--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : @katsyua_swan
+  twitter          : katsyua_swan
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
