--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ author:
   orcid            : "https://orcid.org/0009-0003-2304-1307"
   semantic         : # URL
   pubmed           : # URL
-  researchgate     : # URL
+  researchgate     : "https://www.researchgate.net/profile/Katsuya-Shiratori"
   scopus           : # URL
 
   # Repositories and software development
