--- a/_config.yml
+++ b/_config.yml
@@ -75,6 +75,7 @@ author:
   xing             : # Username
   youtube          : # Username
   zhihu            : # Username
+  note            : katsuya_swan
 
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
