--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ author:
   lastfm           : # Username
   linkedin         : katsuya-shiratori
   mastodon         : # URL
-  medium           : katsuya2
+  medium           : # Username
   pinterest        : # Username
   soundcloud       : # Username
   steam            : # Username
