--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   name             : "Katsuya Shiratori"
   pronouns         : # example: "she/her"  
   bio              : "Ph.D. in Physics | Nanophotonics & Machine Learning"
-  location         : "Champaign, IL"
+  location         : "Spring, TX"
   employer         : 
   uri              : # URL
   email            : "katsuya2@illinois.edu" 
